# routes/auth.php
@@ -7,6 +7,5 @@ Route::prefix('auth')->group(
         Route::post('/login', [AuthController::class, 'login'])->name('auth_login');
         Route::get('/logout', [AuthController::class, 'logout'])->name('auth_logout');
         Route::post('/create', [AuthController::class, 'create'])->name('auth_create');
-        Route::post('/show', [AuthController::class, 'show'])->name('auth_show');
     }
 );
